--- a/public/global.css
+++ b/public/global.css
@@ -13,7 +13,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   overflow: hidden;
+
+  
 }
+
+body::-webkit-scrollbar {
+  display: none;
+  }
 
 a {
   color: rgb(0, 100, 200);
